Fixed service overlay overflow

--- a/src/components/NormalComponents/Overlays/ServicesOverlay/ServicesOverlay.module.css
+++ b/src/components/NormalComponents/Overlays/ServicesOverlay/ServicesOverlay.module.css
@@ -47,6 +47,7 @@
   .service-overlay-container {
     padding: 2.5rem;
     padding-top: 4rem;
+    place-content: unset;
     justify-content: unset;
     overflow-y: auto;
     overflow-x: hidden;
